--- a/ruby/test/Makefile
+++ b/ruby/test/Makefile
@@ -11,8 +11,8 @@ RM = rm -f
 RMD = rmdir
 # This is rubbish, tidy up!!!
 SRCS = db.c player.c stringutil.c predicates.c utils.c speech.c match.c
-TSRC = dbwrap.c playerwrap.c predicateswrap.c tinymud.c
-OBJS = db.o player.o stringutil.o predicates.o utils.o speech.o match.o dbwrap.o playerwrap.o predicateswrap.o tinymud.o
+TSRC = dbwrap.c playerwrap.c predicateswrap.c matchwrap.c tinymud.c
+OBJS = db.o player.o stringutil.o predicates.o utils.o speech.o match.o dbwrap.o playerwrap.o predicateswrap.o matchwrap.o tinymud.o
 OUT_OBJS = $(addprefix $(OUT_DIR)/,$(OBJS))
 LIB=./tinymud.so
 
