--- a/ruby/test/Makefile
+++ b/ruby/test/Makefile
@@ -10,9 +10,9 @@ INCFLAGS = -I. -I$(RUBY) -I$(IN_DIR)
 RM = rm -f
 RMD = rmdir
 # This is rubbish, tidy up!!!
-SRCS = db.c player.c stringutil.c predicates.c utils.c speech.c match.c
-TSRC = dbwrap.c playerwrap.c predicateswrap.c matchwrap.c utilswrap.c speechwrap.c tinymud.c
-OBJS = db.o player.o stringutil.o predicates.o utils.o speech.o match.o dbwrap.o playerwrap.o predicateswrap.o matchwrap.o utilswrap.o speechwrap.o tinymud.o
+SRCS = db.c player.c stringutil.c predicates.c utils.c speech.c match.c move.c look.c
+TSRC = dbwrap.c playerwrap.c predicateswrap.c matchwrap.c utilswrap.c speechwrap.c movewrap.c tinymud.c
+OBJS = db.o player.o stringutil.o predicates.o utils.o speech.o match.o move.o look.o dbwrap.o playerwrap.o predicateswrap.o matchwrap.o utilswrap.o speechwrap.o movewrap.o tinymud.o
 OUT_OBJS = $(addprefix $(OUT_DIR)/,$(OBJS))
 LIB=./tinymud.so
 
