--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -46,6 +46,12 @@ task :test_script => [:compile] do |t|
   system "ruby ./test/run_command.rb #{ENV['name']}"
 end
 
+desc "Run a specific regression file on the converted tinymud code (rake :test_script_converted name=foo])"
+task :test_script_converted => [:compile] do |t|
+  ENV['TEST_TYPE']='CONVERTED'
+  system "ruby ./test/run_command.rb #{ENV['name']}"
+end
+
 desc "Run all tests on the current conversion code"
 task :test_converted => [:compile] do |t|
   ENV['TEST_TYPE']='CONVERTED'
