--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,5 +1,6 @@
 source 'http://rubygems.org'
 
-gem 'mocha'
-gem 'rake'
+gem 'mocha', '~> 0.10.4'
+gem 'rake', '~> 0.9.2.2'
+gem 'rdoc', '~> 3.12'
 
