captured most phrases

--- a/ruby/lib/phrases.yml
+++ b/ruby/lib/phrases.yml
@@ -1,155 +1,156 @@
 # YAML Phrasebook for TinyMUD
-# Format 'key' : 'value'
-'penniless' : "%s is penniless."
+#############################
 
-#"Anti-Locked."
-#"Bad destination."
-#"But what do you want to do with the wall?"
-#"Can't set home to home."
-#"Contents:"
-#"Created."
-#"Create what?"
-#"#{@db[i].name}(##{i})"
-#"#{@db[player].name} gives you #{amount} #{amount == 1 ? "penny" : "pennies"}."
-#"#{@db[player].name} killed you!"
-#"#{@db[player].name} stole one of your pennies!"
-#"#{@db[player].name} tried to kill you!"
-#"#{@db[player].name} tried to rob you, but you have no pennies to take."
-#"#{@db[thing].name} is consumed in a burst of flame!"
-#"#{@db[thing].name} is penniless."
-#"Description set."
-#"Destination: ***HOME***"
-#"Dig what?"
-#"Dropped."
-#"Dropped objects go to: #{@utils.getname(r.location)}(##{r.location})"
-#"Dropto removed."
-#"Dropto set."
-#"Dumping..."
-#"E.g.: name player = newname password"
-#"***End of List***"
-#"Exit dropped."
-#"Exits:"
-#"Exit taken."
-#"Fail: #{r.fail}"
-#"Flag reset."
-#"Flag set."
-#"Give it what new name?"
-#"Give to whom?"
-#"Home set."
-#"Home: #{@utils.getname(r.exits)}(##{r.exits})"
-#"Huh?  (Type \"help\" for help.)"
-#"I can't find that key!"
-#"I couldn't find that player."
-#"I don't know which destination you mean!"
-#"I don't know which key you want!"
-#"I don't know which one you mean!"
-#"I don't know which one you want to lock!"
-#"I don't know which way you mean!"
-#"I don't know which you mean!"
-#"I don't know who you mean!"
-#"I don't recognized that flag."
-#"I don't recognize that name."
-#"I don't see that here."
-#"I don't see that player here."
-#"I don't see what you want to lock!"
-#"Incorrect password."
-#"Internal error: weird object type."
-#"It costs a penny to link this exit."
-#"It costs two pennies to link this exit."
-#"Keys can only be players or things."
-#"Linked."
-#"Location: #{@utils.getname(r.location)}(##{r.location})"
-#"Locked."
-#"Message set."
-#"#{name} created with room number #{room}."
-#"Name set."
-#"No exits."
-#"Ofail: #{r.ofail}"
-#"Only a Wizard can turn a person into a toad."
-#"Only a Wizard may teleport at will."
-#"Only Wizards may use this command."
-#"Opened."
-#"Open where?"
-#"Osuccess: #{r.osucc}"
-#"Owner changed."
-#"Password changed."
-#"Permission denied."
-#"Players always own themselves."
-#"Rob whom?"
-#"#{room?(r.location) ? "Destination" : "Carried by"}: #{@utils.getname(r.location)}(##{r.location})"
-#"Send it where?"
-#"Sorry"
-#"Sorry, #{filename} is broken.  Management has been notified."
-#"Sorry, Wizards are immortal."
-#"Sorry, you are in a no dumping zone."
-#"Sorry, you can only kill other players."
-#"Sorry, you can only rob other players."
-#"Sorry, you don't have enough pennies."
-#"Sorry, you don't have enough pennies to dig a room."
-#"Sorry, you don't have enough pennies to open an exit."
-#"Success: #{r.succ}"
-#"Taken."
-#"That exit is already linked."
-#"That exit is being carried."
-#"That is not a reasonable name."
-#"That player does not exist."
-#"That player doesn't need that many pennies!"
-#"That's a silly name for a room!"
-#"That's a silly name for a thing!"
-#"That's a strange name for an exit!"
-#"That's not a room!"
-#"There's no place like home..."
-#"The universe contains #{@db.length} objects."
-#"#{total} objects = #{rooms} rooms, #{exits} exits, #{things} things, #{players} players, #{unknowns} unknowns."
-#"Trying to link..."
-#"Try using the \"rob\" command."
-#"Unlinked."
-#"Unlink what?"
-#"Unlocked."
-#"#{@utils.getname(loc)} (##{loc})"
-#"#{@utils.getname(thing)}(##{thing})"
-#"What about what they are carrying?"
-#"You already have that!"
-#"You are carrying:"
-#"You aren't carrying anything."
-#"You cannot make yourself mortal."
-#"You can only examine what you own.  Try using \"look.\""
-#"You can only give to other players."
-#"You can only turn players into toads!"
-#"You can't create an object for less than nothing!"
-#"You can't drop that."
-#"You can't give a player that name."
-#"You can't go that way."
-#"You can't link to that."
-#"You can't lock that!"
-#"You can't pick that up."
-#"You can't pick up a linked exit."
-#"You can't pick up an exit from another room."
-#"You can't put an exit down here."
-#"You can't take that!"
-#"You can't turn a Wizard into a toad."
-#"You can't unlink that!"
-#"You don't have enough pennies."
-#"You don't have enough pennies to link."
-#"You don't have that!"
-#"You don't have that many pennies to give!"
-#"You feel a wrenching sensation..."
-#"You found a penny!"
-#"You give #{amount} #{amount == 1 ? "penny" : "pennies"} to #{@db[who].name}."
-#"You have been turned into a toad."
-#"You have #{@db[player].pennies} #{@db[player].pennies == 1 ? "penny" : "pennies"}."
-#"You have received #{reward} #{reward == 1 ? "penny" : "pennies"} for your sacrifice."
-#"You killed #{@db[victim].name}!"
-#"You must specify a flag to set."
-#"You must specify a password to change a player name."
-#"You must specify a positive number of pennies."
-#"Your complaint has been duly noted."
-#"Your insurance policy pays #{KILL_BONUS} pennies."
-#"Your message has been sent."
-#"Your murder attempt failed."
-#"You say \"#{message}\""
-#"You see nothing special."
-#"You stole a penny."
-#"You turned #{@db[victim].name} into a toad!"
-#"You wake up back home, without your possessions."
-
+'anti-locked'               : "Anti-Locked."
+'bad-destination'           : "Bad destination."
+'what-wall'                 : "But what do you want to do with the wall?"
+'no-set-home'               : "Can't set home to home."
+'contents'                  : "Contents:"
+'created'                   : "Created."
+'create-what'               : "Create what?"
+'name'                      : "%s(#%s)"
+'gives-you-a-penny'         : "%s gives you 1 penny."
+'gives-you-pennies'         : "%s gives you %d pennies."
+'killed-you'                : "%s killed you!"
+'stole-from-you'            : "%s stole one of your pennies!"
+'tried-to-kill-you'         : "%s tried to kill you!"
+'tried-to-rob-you'          : "%s tried to rob you, but you have no pennies to take."
+'consumed-in-flame'         : "%s is consumed in a burst of flame!"
+'penniless'                 : "%s is penniless."
+'desc-set'                  : "Description set."
+'dest-home'                 : "Destination: ***HOME***"
+'dig-what'                  : "Dig what?"
+'dropped'                   : "Dropped."
+'dropped-go-to'             : "Dropped objects go to: %s(#%s)"
+'drop-to-removed'           : "Dropto removed."
+'drop-to-set'               : "Dropto set."
+'dumping'                   : "Dumping..."
+'help-player-password'      : "E.g.: name player = newname password"
+'end-of-list'               : "***End of List***"
+'exit-dropped'              : "Exit dropped."
+'exits'                     : "Exits:"
+'exit-taken'                : "Exit taken."
+'fail'                      : "Fail: %s"
+'flag-reset'                : "Flag reset."
+'flag-set'                  : "Flag set."
+'what-name'                 : "Give it what new name?"
+'give-to-whom'              : "Give to whom?"
+'home-set'                  : "Home set."
+'home'                      : "Home: %s(#%s)"
+'huh'                       : "Huh?  (Type \"help\" for help.)"
+'no-key'                    : "I can't find that key!"
+'no-player'                 : "I couldn't find that player."
+'which-dest'                : "I don't know which destination you mean!"
+'which-key'                 : "I don't know which key you want!"
+'which-one'                 : "I don't know which one you mean!"
+'which-one-lock'            : "I don't know which one you want to lock!"
+'which-way'                 : "I don't know which way you mean!"
+'which'                     : "I don't know which you mean!"
+'who'                       : "I don't know who you mean!"
+'unknown-flag'              : "I don't recognized that flag."
+'unknown-name'              : "I don't recognize that name."
+'dont-see-that'             : "I don't see that here."
+'dont-see-player'           : "I don't see that player here."
+'dont-see-lock'             : "I don't see what you want to lock!"
+'bad-password'              : "Incorrect password."
+'internal-error'            : "Internal error: weird object type."
+'cost-penny-exit'           : "It costs a penny to link this exit."
+'cost-two-exit'             : "It costs two pennies to link this exit."
+'bad-key-link'              : "Keys can only be players or things."
+'linked'                    : "Linked."
+'location'                  : "Location: %s(#%s)"
+'locked'                    : "Locked."
+'message-set'               : "Message set."
+'created-room'              : "%s created with room number %d."
+'name-set'                  : "Name set."
+'no-exits'                  : "No exits."
+'ofail'                     : "Ofail: %s"
+'bad-toad'                  : "Only a Wizard can turn a person into a toad."
+'bad-teleport'              : "Only a Wizard may teleport at will."
+'only-wizard'               : "Only Wizards may use this command."
+'opened'                    : "Opened."
+'open-where'                : "Open where?"
+'osucc'                     : "Osuccess: %s"
+'owner-changed'             : "Owner changed."
+'password-changed'          : "Password changed."
+'no-permission'             : "Permission denied."
+'own-self'                  : "Players always own themselves."
+'rob-whom'                  : "Rob whom?"
+'destination'               : "Destination"
+'carried-by'                : "Carried by"
+'send-where'                : "Send it where?"
+'sorry'                     : "Sorry"
+'sorry-bad-file'            : "Sorry, %s is broken.  Management has been notified."
+'sorry-wizard-immortal'     : "Sorry, Wizards are immortal."
+'sorry-no-dump'             : "Sorry, you are in a no dumping zone."
+'sorry-only-kill-players'   : "Sorry, you can only kill other players."
+'sorry-only-rob-players'    : "Sorry, you can only rob other players."
+'sorry-poor'                : "Sorry, you don't have enough pennies."
+'sorry-poor-dig'            : "Sorry, you don't have enough pennies to dig a room."
+'sorry-poor-open'           : "Sorry, you don't have enough pennies to open an exit."
+'success'                   : "Success: %s"
+'taken'                     : "Taken."
+'exit-already-linked'       : "That exit is already linked."
+'exit-being-carried'        : "That exit is being carried."
+'not-a-reasonable-name'     : "That is not a reasonable name."
+'player-does-not-exist'     : "That player does not exist."
+'player-too-rich'           : "That player doesn't need that many pennies!"
+'silly-room-name'           : "That's a silly name for a room!"
+'silly-thing-name'          : "That's a silly name for a thing!"
+'strange-exit-name'         : "That's a strange name for an exit!"
+'not-a-room'                : "That's not a room!"
+'no-place-like-home'        : "There's no place like home..."
+'universe-contains'         : "The universe contains %d objects."
+'universe-details'          : "%d objects = %d rooms, %d exits, %d things, %d players, %d unknowns."
+'trying-to-link'            : "Trying to link..."
+'try-rob-command'           : "Try using the \"rob\" command."
+'unlinked'                  : "Unlinked."
+'unlink-what'               : "Unlink what?"
+'unlocked'                  : "Unlocked."
+'what-about-them'           : "What about what they are carrying?"
+'already-have-it'           : "You already have that!"
+'carrying'                  : "You are carrying:"
+'carrying-nothing'          : "You aren't carrying anything."
+'cant-be-mortal'            : "You cannot make yourself mortal."
+'can-only-examine-owned'    : "You can only examine what you own.  Try using \"look.\""
+'can-only-give-to-others'   : "You can only give to other players."
+'can-only-toad-players'     : "You can only turn players into toads!"
+'objects-must-have-a-value' : "You can't create an object for less than nothing!"
+'cant-drop-that'            : "You can't drop that."
+'bad-player-name'           : "You can't give a player that name."
+'bad-direction'             : "You can't go that way."
+'bad-link'                  : "You can't link to that."
+'bad-lock'                  : "You can't lock that!"
+'bad-pickup'                : "You can't pick that up."
+'no-get-linked-exit'        : "You can't pick up a linked exit."
+'no-get-exit-elsewhere'     : "You can't pick up an exit from another room."
+'no-drop-exit-here'         : "You can't put an exit down here."
+'cant-take'                 : "You can't take that!"
+'cant-toad-wizard'          : "You can't turn a Wizard into a toad."
+'cant-unlink-that'          : "You can't unlink that!"
+'too-poor'                  : "You don't have enough pennies."
+'too-poor-to-link'          : "You don't have enough pennies to link."
+'dont-have-it'              : "You don't have that!"
+'not-rich-enough'           : "You don't have that many pennies to give!"
+'feel-weird'                : "You feel a wrenching sensation..."
+'found-a-penny'             : "You found a penny!"
+'you-give-a-penny'          : "You give 1 penny to %s."
+'you-give-pennies'          : "You give %d pennies to %s."
+'you-become-a-toad'         : "You have been turned into a toad."
+'you-have-penny'            : "You have 1 penny."
+'you-have-pennies'          : "You have %d pennies."
+'you-have-received-penny'   : "You have received 1 penny for your sacrifice."
+'you-have-received-pennies' : "You have received %d pennies for your sacrifice."
+'you-killed'                : "You killed %s!"
+'specify-a-flag'            : "You must specify a flag to set."
+'specify-a-password'        : "You must specify a password to change a player name."
+'specify-positive-pennies'  : "You must specify a positive number of pennies."
+'complaint-noted'           : "Your complaint has been duly noted."
+'insurance-pays-out'        : "Your insurance policy pays %d pennies."
+'message-sent'              : "Your message has been sent."
+'murder-failed'             : "Your murder attempt failed."
+'you-say'                   : "You say \"%s\""
+'see-nothing'               : "You see nothing special."
+'stole-penny'               : "You stole a penny."
+'you-toaded'                : "You turned %s into a toad!"
+'wake-up-home'              : "You wake up back home, without your possessions."
