#39 all non test code (I think) has been localized through the phrasebook

--- a/ruby/lib/phrases.yml
+++ b/ruby/lib/phrases.yml
@@ -12,15 +12,20 @@
 'gives-you-a-penny'         : "%s gives you 1 penny."
 'gives-you-pennies'         : "%s gives you %d pennies."
 'killed-you'                : "%s killed you!"
+'killed'                    : "%s killed %s!"
 'stole-from-you'            : "%s stole one of your pennies!"
 'tried-to-kill-you'         : "%s tried to kill you!"
 'tried-to-rob-you'          : "%s tried to rob you, but you have no pennies to take."
 'consumed-in-flame'         : "%s is consumed in a burst of flame!"
+'you-have-a-conscience'     : "Your conscience tells you not to."
+'sacrifices'                : "%s sacrifices %s."
 'penniless'                 : "%s is penniless."
 'desc-set'                  : "Description set."
 'dest-home'                 : "Destination: ***HOME***"
+'dest'                      : "Destination: %s(#%s)"
 'dig-what'                  : "Dig what?"
 'dropped'                   : "Dropped."
+'dropped-thing'             : "%s dropped %s."
 'dropped-go-to'             : "Dropped objects go to: %s(#%s)"
 'drop-to-removed'           : "Dropto removed."
 'drop-to-set'               : "Dropto set."
@@ -77,7 +82,7 @@
 'own-self'                  : "Players always own themselves."
 'rob-whom'                  : "Rob whom?"
 'destination'               : "Destination"
-'carried-by'                : "Carried by"
+'carried-by'                : "Carried by: %s(#%s)"
 'send-where'                : "Send it where?"
 'sorry'                     : "Sorry"
 'sorry-bad-file'            : "Sorry, %s is broken.  Management has been notified."
@@ -137,7 +142,7 @@
 'you-give-a-penny'          : "You give 1 penny to %s."
 'you-give-pennies'          : "You give %d pennies to %s."
 'you-become-a-toad'         : "You have been turned into a toad."
-'you-have-penny'            : "You have 1 penny."
+'you-have-a-penny'          : "You have 1 penny."
 'you-have-pennies'          : "You have %d pennies."
 'you-have-received-penny'   : "You have received 1 penny for your sacrifice."
 'you-have-received-pennies' : "You have received %d pennies for your sacrifice."
@@ -150,9 +155,13 @@
 'message-sent'              : "Your message has been sent."
 'murder-failed'             : "Your murder attempt failed."
 'you-say'                   : "You say \"%s\""
+'someone-says'              : "%s says \"%s\""
+'someone-shouts'            : "%s shouts \"%s\""
+'someone-looking-for-you'   : "You sense that %s is looking for you in %s." 
 'see-nothing'               : "You see nothing special."
 'stole-penny'               : "You stole a penny."
 'you-toaded'                : "You turned %s into a toad!"
+'toad-name'                 : "a slimy toad named %s"
 'wake-up-home'              : "You wake up back home, without your possessions."
 'bye-bye-wizard'            : "Wizard has left."
 'hello-wizard'              : "Wizard has arrived."
